[gd_scene load_steps=2 format=3 uid="uid://game_hud_001"]

[ext_resource type="Script" path="res://scripts/ui/game_hud.gd" id="1_script"]

[node name="GameHUD" type="CanvasLayer"]
layer = 5
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HealthContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CoresContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CoresLabel" type="Label" parent="MarginContainer/VBoxContainer/CoresContainer"]
layout_mode = 2
text = "Cores: 0"
